scroll on mobile fixed

--- a/src/assets/sass/about-me.scss
+++ b/src/assets/sass/about-me.scss
@@ -11,7 +11,7 @@
         top: 4050px;
     }
     @media screen and (max-width: $custom-md) {
-        top: 4000px;
+        top: 3900px;
     }
     @media screen and (max-width: $sm) {
         top: 2700px;
