--- a/src/assets/sass/contact.scss
+++ b/src/assets/sass/contact.scss
@@ -21,22 +21,14 @@ form{
 	}
 }
 .modal{
-	// position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */	
-	// padding-top: 4vh; /* Location of the box */
-	
 	left: 0;
 	width: 100%;
-	height: 50vh; 	 
+	height: 50vh; 
+	display: none;	 
 }
 
 .modal-clicked{
-	// top: 100px;
-	// top: 9vh;
-	// vertical-align: middle;
-	// transition: 0.7s;
-	// top: 50%;
-	// left: 50%;
 	position: fixed;
 	top: 20%;
     left: 1%;
